fix: styles fixed to avoid x scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,10 @@ body {
 }
 
 /* Global custom styles */
+.prose pre {
+  max-width: calc(100vw - 2rem);
+}
+
 .prose iframe {
   width: 100%;
   height: 400px;
